feat: cf. issue #1
- croix pour fermer la popup
- popup plus grande
- coloriser à la mode JS
- "copy to clipboard"

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="<%= BASE_URL %>charte.css">
     <!-- charte Composants -->
     <link rel="stylesheet" href="<%= BASE_URL %>app.css">
+    <!-- charte hljs -->
+    <link rel="stylesheet" href="<%= BASE_URL %>default.css">
     <title>API des Services</title>
   </head>
   <body>
